testsuite/tests/deriving/should_compile/T6031.hs
{-# LANGUAGE StandaloneDeriving #-}

module T6031 where

import T6031a

deriving instance Show Empty
