testsuite/tests/deriving/should_fail/T7800.hs
{-# LANGUAGE StandaloneDeriving, DeriveDataTypeable #-}
module T7800 where

import T7800a
import Data.Typeable

deriving instance Typeable A
